[gd_scene load_steps=6 format=1]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://assets/player.png" type="Texture" id=2]
[ext_resource path="res://assets/player_power_ring.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 15.0

[sub_resource type="Animation" id=2]

resource/name = "explode"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2.5, 2.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="player" type="RigidBody2D" groups=[
"player",
]]

transform/pos = Vector2( 64, 480 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )

[node name="ScaleNode" type="Node2D" parent="."]

transform/pos = Vector2( 0, 15 )

[node name="RotationNode" type="Node2D" parent="ScaleNode"]

transform/pos = Vector2( 0, -15 )

[node name="Sprite" type="Sprite" parent="ScaleNode/RotationNode"]

texture = ExtResource( 2 )

[node name="RingSprite" type="Sprite" parent="ScaleNode/RotationNode"]

visibility/visible = false
visibility/opacity = 0.0
transform/scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ScaleNode/RotationNode/RingSprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/explode = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0


